--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,9 @@ php:
   - 5.5
   - 5.6
 
+before_script:
+  - composer self-update
+  - composer install --dev --prefer-source
+
 script:
   phpunit -v
