--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,9 @@
     "require": {
         "guzzlehttp/guzzle": "5.2.*"
     },
+    "require-dev": {
+        "satooshi/php-coveralls": "dev-master"
+    },
     "license": "New-BSD",
     "autoload": {
         "psr-4" : {
