--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,4 +12,7 @@
             </exclude>
         </whitelist>
     </filter>
+    <logging>
+        <log type="coverage-clover" target="tmp/clover.xml"/>
+    </logging>
 </phpunit>
